Fixes information box visibility

--- a/style/default.less
+++ b/style/default.less
@@ -192,6 +192,7 @@ body {
 
 .info {
 	position: fixed;
+	visibility: hidden;
 	bottom: 70px;
 	left: 30px;
 	width: 300px;
